<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/rounded_edge"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="16dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="36dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:showIn="@layout/fragment_camera">

    <ImageView
        android:id="@+id/bottom_sheet_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
        android:contentDescription="@string/arrow" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_use_gpu"
        style="@style/Theme.AppCompat"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@color/coklat_700"
        android:text="@string/tfe_ocr_gpu"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/log_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tfe_is_labels_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tfe_ocr_texts_found" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chips_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:chipSpacingVertical="4dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rerun_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:iconGravity="textStart"
        app:icon="@drawable/ic_group_4"
        android:text="@string/scan"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />

</LinearLayout>
