<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scanner.CameraFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/cd_preview"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.045"
            tools:ignore="ImageContrastCheck" />


        <Button
            android:id="@+id/button_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/preview_image"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/preview_image"
            app:layout_constraintTop_toBottomOf="@+id/preview_image" />

        <Button
            android:id="@+id/button_galeri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="52dp"
            android:text="@string/galeri"
            app:layout_constraintEnd_toEndOf="@+id/button_camera"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/button_camera"
            app:layout_constraintTop_toBottomOf="@+id/button_camera" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/tfe_is_bottom_sheet_layout"
        android:id="@+id/lay_bottom_sheet"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>