<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEEC1"
    tools:context=".view.detail.DetailActivity">

    <TextView
        android:id="@+id/tvkomposisi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="112dp"
        android:fontFamily="@font/opensansregular"
        android:text="@string/komposisi"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvnamamakanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/opensansregular"
        android:text="@string/nama_makanan"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvkomposisi" />

    <EditText
        android:id="@+id/makananEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_fastfood_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/opensansregular"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvnamamakanan"
        />



    <TextView
        android:id="@+id/tvkomposisimakanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/opensansregular"
        android:text="@string/komposisi_makanan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makananEditText" />

    <TextView
        android:id="@+id/tvhasilkomposisi"
        android:layout_width="340dp"
        android:layout_height="110dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:fontFamily="@font/opensansregular"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvkomposisimakanan"
        tools:text="Komposisi" />

    <TextView
        android:id="@+id/tvrekomendasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/opensansregular"
        android:text="@string/rekomendasi"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvhasilkomposisi" />

    <TextView
        android:id="@+id/tvhasilrekomendasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/opensansregular"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tvrekomendasi"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/tvrekomendasi"
        app:layout_constraintTop_toBottomOf="@+id/tvrekomendasi"
        tools:text="rekomendasi" />

</androidx.constraintlayout.widget.ConstraintLayout>